--- a/archives/zhihu-search/2023-11-13.md
+++ b/archives/zhihu-search/2023-11-13.md
@@ -1,11 +1,19 @@
 # 2023-11-13
 
-共 22 条
+共 29 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Mon Nov 13 2023 11:00:42 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Nov 13 2023 12:00:45 GMT+0800 (China Standard Time) -->
+1. [剪辑用笔记本推荐](https://www.zhihu.com/search?q=剪辑用笔记本推荐)
 1. [T1 晋级总决赛](https://www.zhihu.com/search?q=T1 晋级总决赛)
 1. [内行人眼中的全屋定制](https://www.zhihu.com/search?q=内行人眼中的全屋定制)
+1. [阿森纳3比1伯恩利](https://www.zhihu.com/search?q=阿森纳3比1伯恩利)
+1. [WBG战胜BLG晋级决赛](https://www.zhihu.com/search?q=WBG战胜BLG晋级决赛)
+1. [从“双十一”看消费新态势](https://www.zhihu.com/search?q=从“双十一”看消费新态势)
+1. [男子申请强执获赔1600只鹅](https://www.zhihu.com/search?q=男子申请强执获赔1600只鹅)
+1. [Faker晋级决赛时的表情](https://www.zhihu.com/search?q=Faker晋级决赛时的表情)
+1. [大闸蟹跌出“白菜价”](https://www.zhihu.com/search?q=大闸蟹跌出“白菜价”)
+1. [王一博单膝跪地戴帽杀](https://www.zhihu.com/search?q=王一博单膝跪地戴帽杀)
 1. [蓝牙耳机](https://www.zhihu.com/search?q=蓝牙耳机)
 1. [降噪耳机](https://www.zhihu.com/search?q=降噪耳机)
 1. [手机壁纸](https://www.zhihu.com/search?q=手机壁纸)
@@ -14,7 +22,6 @@
 1. [台式机推荐](https://www.zhihu.com/search?q=台式机推荐)
 1. [电脑配置](https://www.zhihu.com/search?q=电脑配置)
 1. [一个月国考来得及吗](https://www.zhihu.com/search?q=一个月国考来得及吗)
-1. [剪辑用笔记本推荐](https://www.zhihu.com/search?q=剪辑用笔记本推荐)
 1. [希法医院](https://www.zhihu.com/search?q=希法医院)
 1. [57国联合谴责以色列](https://www.zhihu.com/search?q=57国联合谴责以色列)
 1. [加沙数家医院受到直接打击](https://www.zhihu.com/search?q=加沙数家医院受到直接打击)
