--- a/archives/toutiao-search/2023-11-13.md
+++ b/archives/toutiao-search/2023-11-13.md
@@ -1,60 +1,80 @@
 # 2023-11-13
 
-共 225 条
+共 242 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Nov 13 2023 15:00:45 GMT+0800 (China Standard Time) -->
-1. [中国通缉缅北电诈头目引外媒关注](https://so.toutiao.com/search?keyword=中国通缉缅北电诈头目引外媒关注)
+<!-- 最后更新时间 Mon Nov 13 2023 16:00:56 GMT+0800 (China Standard Time) -->
 1. [李佳琦团队回应双十一收入250亿](https://so.toutiao.com/search?keyword=李佳琦团队回应双十一收入250亿)
-1. [地球容得下中美各自发展共同繁荣](https://so.toutiao.com/search?keyword=地球容得下中美各自发展共同繁荣)
-1. [媒体：果敢明家工地挖出尸体为中国人](https://so.toutiao.com/search?keyword=媒体：果敢明家工地挖出尸体为中国人)
+1. [中国通缉缅北电诈头目引外媒关注](https://so.toutiao.com/search?keyword=中国通缉缅北电诈头目引外媒关注)
+1. [流感高发季防治指南请收好](https://so.toutiao.com/search?keyword=流感高发季防治指南请收好)
+1. [福建一原区长水上餐厅就餐时落水身亡](https://so.toutiao.com/search?keyword=福建一原区长水上餐厅就餐时落水身亡)
 1. [官方通报镇长在会议现场摔瓶子](https://so.toutiao.com/search?keyword=官方通报镇长在会议现场摔瓶子)
 1. [阿里回应多款产品“崩了”](https://so.toutiao.com/search?keyword=阿里回应多款产品“崩了”)
+1. [出租车未打表男子到目的地拒付车费](https://so.toutiao.com/search?keyword=出租车未打表男子到目的地拒付车费)
 1. [大妈买海鱼红烧后半夜发绿光](https://so.toutiao.com/search?keyword=大妈买海鱼红烧后半夜发绿光)
-1. [1名中国人被越南判处死刑](https://so.toutiao.com/search?keyword=1名中国人被越南判处死刑)
-1. [火箭主帅：赢掘金让我们羽翼渐丰](https://so.toutiao.com/search?keyword=火箭主帅：赢掘金让我们羽翼渐丰)
-1. [张译拒绝给狂飙实体书签名](https://so.toutiao.com/search?keyword=张译拒绝给狂飙实体书签名)
-1. [腾讯辟谣马化腾称阿里云不如腾讯云](https://so.toutiao.com/search?keyword=腾讯辟谣马化腾称阿里云不如腾讯云)
-1. [菲警方发现6具遗体 2名死者为中国人](https://so.toutiao.com/search?keyword=菲警方发现6具遗体+2名死者为中国人)
 1. [主持人白燕升七岁儿子被一男子抱摔](https://so.toutiao.com/search?keyword=主持人白燕升七岁儿子被一男子抱摔)
-1. [5人驾车坠江4人遇难 监控曝光](https://so.toutiao.com/search?keyword=5人驾车坠江4人遇难+监控曝光)
-1. [拉塞尔对阵开拓者拿到11分5板11助](https://so.toutiao.com/search?keyword=拉塞尔对阵开拓者拿到11分5板11助)
-1. [曹云金回应听云轩叫“干德云”](https://so.toutiao.com/search?keyword=曹云金回应听云轩叫“干德云”)
 1. [未让大G加塞遭恶意别车？交警回应](https://so.toutiao.com/search?keyword=未让大G加塞遭恶意别车？交警回应)
+1. [腾讯辟谣马化腾称阿里云不如腾讯云](https://so.toutiao.com/search?keyword=腾讯辟谣马化腾称阿里云不如腾讯云)
+1. [媒体：果敢明家工地挖出尸体为中国人](https://so.toutiao.com/search?keyword=媒体：果敢明家工地挖出尸体为中国人)
+1. [菲警方发现6具遗体 2名死者为中国人](https://so.toutiao.com/search?keyword=菲警方发现6具遗体+2名死者为中国人)
+1. [1名中国人被越南判处死刑](https://so.toutiao.com/search?keyword=1名中国人被越南判处死刑)
+1. [张译拒绝给狂飙实体书签名](https://so.toutiao.com/search?keyword=张译拒绝给狂飙实体书签名)
+1. [收评：A股三大指数震荡小幅收涨](https://so.toutiao.com/search?keyword=收评：A股三大指数震荡小幅收涨)
+1. [马斯克：中国大陆会统一台湾](https://so.toutiao.com/search?keyword=马斯克：中国大陆会统一台湾)
+1. [爱奇艺回应白鹿喊话](https://so.toutiao.com/search?keyword=爱奇艺回应白鹿喊话)
+1. [上官正义再次追问商丘妇幼保健院](https://so.toutiao.com/search?keyword=上官正义再次追问商丘妇幼保健院)
+1. [5人驾车坠江4人遇难 监控曝光](https://so.toutiao.com/search?keyword=5人驾车坠江4人遇难+监控曝光)
+1. [以总理：战后加沙将“非军事化”](https://so.toutiao.com/search?keyword=以总理：战后加沙将“非军事化”)
+1. [缅北四大家族成员称家族将杜绝电诈](https://so.toutiao.com/search?keyword=缅北四大家族成员称家族将杜绝电诈)
+1. [伊朗：应看清美阻挠加沙停火真面目](https://so.toutiao.com/search?keyword=伊朗：应看清美阻挠加沙停火真面目)
+1. [以色列称阿巴斯不应接管加沙](https://so.toutiao.com/search?keyword=以色列称阿巴斯不应接管加沙)
+1. [马斯克：中国聪明勤奋的人比美国多](https://so.toutiao.com/search?keyword=马斯克：中国聪明勤奋的人比美国多)
+1. [大连万达集团被强制执行1.6亿](https://so.toutiao.com/search?keyword=大连万达集团被强制执行1.6亿)
+1. [伊拉克武装组织对以色列发动袭击](https://so.toutiao.com/search?keyword=伊拉克武装组织对以色列发动袭击)
+1. [男子每天吃三顿腌制品确诊癌症晚期](https://so.toutiao.com/search?keyword=男子每天吃三顿腌制品确诊癌症晚期)
+1. [曹云金回应听云轩叫“干德云”](https://so.toutiao.com/search?keyword=曹云金回应听云轩叫“干德云”)
+1. [加沙最大医院手术室已完全停用](https://so.toutiao.com/search?keyword=加沙最大医院手术室已完全停用)
+1. [林志玲日本被偶遇一身行头超4万](https://so.toutiao.com/search?keyword=林志玲日本被偶遇一身行头超4万)
+1. [曝擎天巡航导弹已交台空军部署](https://so.toutiao.com/search?keyword=曝擎天巡航导弹已交台空军部署)
+1. [华为Mate60Pro本土零件价值占比47%](https://so.toutiao.com/search?keyword=华为Mate60Pro本土零件价值占比47%)
+1. [从“双十一”看消费新态势](https://so.toutiao.com/search?keyword=从“双十一”看消费新态势)
+1. [中国扩大开放如何惠及世界](https://so.toutiao.com/search?keyword=中国扩大开放如何惠及世界)
+1. [双11京东手机销量榜：小米14第七](https://so.toutiao.com/search?keyword=双11京东手机销量榜：小米14第七)
+1. [胡锡进为去刚果金的年轻人壮行](https://so.toutiao.com/search?keyword=胡锡进为去刚果金的年轻人壮行)
+1. [北约前秘书长建议：乌克兰部分入约](https://so.toutiao.com/search?keyword=北约前秘书长建议：乌克兰部分入约)
+1. [雷军：曾觉得USB不太重要被骂惨了](https://so.toutiao.com/search?keyword=雷军：曾觉得USB不太重要被骂惨了)
+1. [美德媒体指控乌军官涉北溪管道爆炸](https://so.toutiao.com/search?keyword=美德媒体指控乌军官涉北溪管道爆炸)
+1. [本周初降温重心转移至南方](https://so.toutiao.com/search?keyword=本周初降温重心转移至南方)
+1. [上官正义受到国家卫健委的邀请](https://so.toutiao.com/search?keyword=上官正义受到国家卫健委的邀请)
+1. [缅军战机被击落 战况更趋激烈](https://so.toutiao.com/search?keyword=缅军战机被击落+战况更趋激烈)
+1. [美媒：中美元首会晤是全球稳定的胜利](https://so.toutiao.com/search?keyword=美媒：中美元首会晤是全球稳定的胜利)
+1. [大闸蟹跌出白菜价](https://so.toutiao.com/search?keyword=大闸蟹跌出白菜价)
+1. [赖清德扬言“我当选最和平”遭质疑](https://so.toutiao.com/search?keyword=赖清德扬言“我当选最和平”遭质疑)
+1. [大陆货轮经台湾海峡被喊话后霸气回话](https://so.toutiao.com/search?keyword=大陆货轮经台湾海峡被喊话后霸气回话)
+1. [黎以边境附近地区遭火箭弹袭击](https://so.toutiao.com/search?keyword=黎以边境附近地区遭火箭弹袭击)
+1. [爱德华兹：比赛后期康利让我别投了](https://so.toutiao.com/search?keyword=爱德华兹：比赛后期康利让我别投了)
+1. [男子割喉杀害妻子 4岁儿子目睹全程](https://so.toutiao.com/search?keyword=男子割喉杀害妻子+4岁儿子目睹全程)
+1. [地球容得下中美各自发展共同繁荣](https://so.toutiao.com/search?keyword=地球容得下中美各自发展共同繁荣)
+1. [火箭主帅：赢掘金让我们羽翼渐丰](https://so.toutiao.com/search?keyword=火箭主帅：赢掘金让我们羽翼渐丰)
+1. [拉塞尔对阵开拓者拿到11分5板11助](https://so.toutiao.com/search?keyword=拉塞尔对阵开拓者拿到11分5板11助)
 1. [美称会对俄APEC代表尽东道主之谊](https://so.toutiao.com/search?keyword=美称会对俄APEC代表尽东道主之谊)
 1. [冰岛频繁地震导致大地出现裂痕](https://so.toutiao.com/search?keyword=冰岛频繁地震导致大地出现裂痕)
 1. [追梦：我与保罗必须做得更好](https://so.toutiao.com/search?keyword=追梦：我与保罗必须做得更好)
-1. [以总理：战后加沙将“非军事化”](https://so.toutiao.com/search?keyword=以总理：战后加沙将“非军事化”)
-1. [缅北四大家族成员称家族将杜绝电诈](https://so.toutiao.com/search?keyword=缅北四大家族成员称家族将杜绝电诈)
-1. [伊拉克武装组织对以色列发动袭击](https://so.toutiao.com/search?keyword=伊拉克武装组织对以色列发动袭击)
-1. [以色列称阿巴斯不应接管加沙](https://so.toutiao.com/search?keyword=以色列称阿巴斯不应接管加沙)
-1. [胡锡进为去刚果金的年轻人壮行](https://so.toutiao.com/search?keyword=胡锡进为去刚果金的年轻人壮行)
 1. [美媒：美军在叙伊遭袭加大冲突风险](https://so.toutiao.com/search?keyword=美媒：美军在叙伊遭袭加大冲突风险)
 1. [宋楚瑜：两岸要和平 我们不想打仗](https://so.toutiao.com/search?keyword=宋楚瑜：两岸要和平+我们不想打仗)
 1. [果敢地方官媒称明学昌为“老领导”](https://so.toutiao.com/search?keyword=果敢地方官媒称明学昌为“老领导”)
-1. [男子每天吃三顿腌制品确诊癌症晚期](https://so.toutiao.com/search?keyword=男子每天吃三顿腌制品确诊癌症晚期)
-1. [华为Mate60Pro本土零件价值占比47%](https://so.toutiao.com/search?keyword=华为Mate60Pro本土零件价值占比47%)
-1. [林志玲日本被偶遇一身行头超4万](https://so.toutiao.com/search?keyword=林志玲日本被偶遇一身行头超4万)
-1. [福建一原区长水上餐厅就餐时落水身亡](https://so.toutiao.com/search?keyword=福建一原区长水上餐厅就餐时落水身亡)
 1. [数百记者谴责以军“袭击媒体人员”](https://so.toutiao.com/search?keyword=数百记者谴责以军“袭击媒体人员”)
 1. [华为官宣：2道题悬赏200万](https://so.toutiao.com/search?keyword=华为官宣：2道题悬赏200万)
-1. [上官正义受到国家卫健委的邀请](https://so.toutiao.com/search?keyword=上官正义受到国家卫健委的邀请)
-1. [马斯克：中国大陆会统一台湾](https://so.toutiao.com/search?keyword=马斯克：中国大陆会统一台湾)
 1. [剧组高校拍摄用激光笔扫射驱赶学生](https://so.toutiao.com/search?keyword=剧组高校拍摄用激光笔扫射驱赶学生)
 1. [杰夫·格林对阵掘金高效砍15分4板](https://so.toutiao.com/search?keyword=杰夫·格林对阵掘金高效砍15分4板)
-1. [大陆货轮经台湾海峡被喊话后霸气回话](https://so.toutiao.com/search?keyword=大陆货轮经台湾海峡被喊话后霸气回话)
 1. [女子失业被妈妈雇佣当司机日薪20元](https://so.toutiao.com/search?keyword=女子失业被妈妈雇佣当司机日薪20元)
 1. [红十字国际委员会呼吁保护加沙平民](https://so.toutiao.com/search?keyword=红十字国际委员会呼吁保护加沙平民)
 1. [保罗3中0仅得到2分1板5助](https://so.toutiao.com/search?keyword=保罗3中0仅得到2分1板5助)
 1. [以总统：马克龙的言论在以引发痛苦](https://so.toutiao.com/search?keyword=以总统：马克龙的言论在以引发痛苦)
 1. [主持人评国道收费：多听群众心声](https://so.toutiao.com/search?keyword=主持人评国道收费：多听群众心声)
-1. [大连万达集团被强制执行1.6亿](https://so.toutiao.com/search?keyword=大连万达集团被强制执行1.6亿)
-1. [爱奇艺回应白鹿喊话](https://so.toutiao.com/search?keyword=爱奇艺回应白鹿喊话)
 1. [德善和狗焕现实也be了](https://so.toutiao.com/search?keyword=德善和狗焕现实也be了)
 1. [男子四千米高山骑行偶遇野生大熊猫](https://so.toutiao.com/search?keyword=男子四千米高山骑行偶遇野生大熊猫)
 1. [坍塌体育馆篮球少年消逝的7日](https://so.toutiao.com/search?keyword=坍塌体育馆篮球少年消逝的7日)
-1. [双11京东手机销量榜：小米14第七](https://so.toutiao.com/search?keyword=双11京东手机销量榜：小米14第七)
-1. [缅军战机被击落 战况更趋激烈](https://so.toutiao.com/search?keyword=缅军战机被击落+战况更趋激烈)
 1. [四川破获特大跨国电信网络诈骗案](https://so.toutiao.com/search?keyword=四川破获特大跨国电信网络诈骗案)
 1. [以总理：将在必要时坚定与世界对抗](https://so.toutiao.com/search?keyword=以总理：将在必要时坚定与世界对抗)
 1. [今年冬天会出现极端寒潮吗](https://so.toutiao.com/search?keyword=今年冬天会出现极端寒潮吗)
@@ -64,7 +84,6 @@
 1. [NASA拍到地球“凝视幽灵”](https://so.toutiao.com/search?keyword=NASA拍到地球“凝视幽灵”)
 1. [除库里外勇士四位首发合计得到33分](https://so.toutiao.com/search?keyword=除库里外勇士四位首发合计得到33分)
 1. [一句公主请上车让陈丽君大脑宕机](https://so.toutiao.com/search?keyword=一句公主请上车让陈丽君大脑宕机)
-1. [从“双十一”看消费新态势](https://so.toutiao.com/search?keyword=从“双十一”看消费新态势)
 1. [媒体谈以民间借贷为名的新型腐败](https://so.toutiao.com/search?keyword=媒体谈以民间借贷为名的新型腐败)
 1. [韩国中小学开始流行“萝卜刀”](https://so.toutiao.com/search?keyword=韩国中小学开始流行“萝卜刀”)
 1. [中央气象台：新一轮冷空气蓄势待发](https://so.toutiao.com/search?keyword=中央气象台：新一轮冷空气蓄势待发)
@@ -79,14 +98,12 @@
 1. [冰岛一天1400次地震](https://so.toutiao.com/search?keyword=冰岛一天1400次地震)
 1. [红薯摊小狗有自己的被子和玩具](https://so.toutiao.com/search?keyword=红薯摊小狗有自己的被子和玩具)
 1. [扬科维奇：国足有机会争夺出线资格](https://so.toutiao.com/search?keyword=扬科维奇：国足有机会争夺出线资格)
-1. [雷军：曾觉得USB不太重要被骂惨了](https://so.toutiao.com/search?keyword=雷军：曾觉得USB不太重要被骂惨了)
 1. [全球六代战机发展状况如何](https://so.toutiao.com/search?keyword=全球六代战机发展状况如何)
 1. [外媒：国米开始与劳塔罗谈续约](https://so.toutiao.com/search?keyword=外媒：国米开始与劳塔罗谈续约)
 1. [佘诗曼参加朋友婚礼](https://so.toutiao.com/search?keyword=佘诗曼参加朋友婚礼)
 1. [卡拉格：挺佩服帕尔默敢于转会](https://so.toutiao.com/search?keyword=卡拉格：挺佩服帕尔默敢于转会)
 1. [记者市场暗访买鱼遇鬼秤](https://so.toutiao.com/search?keyword=记者市场暗访买鱼遇鬼秤)
 1. [小伙自觉身体健康婚检查出高血糖](https://so.toutiao.com/search?keyword=小伙自觉身体健康婚检查出高血糖)
-1. [大闸蟹跌出白菜价](https://so.toutiao.com/search?keyword=大闸蟹跌出白菜价)
 1. [男子父母被杀害后反杀对方父母儿子](https://so.toutiao.com/search?keyword=男子父母被杀害后反杀对方父母儿子)
 1. [100秒速览中国十年“网事”](https://so.toutiao.com/search?keyword=100秒速览中国十年“网事”)
 1. [八抬大轿娶亲有多热闹](https://so.toutiao.com/search?keyword=八抬大轿娶亲有多热闹)
